# syncbot

./: .gitignore  README.md  flake.nix  pyproject.toml
src/syncbot/: __init__.py
